2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 551567 – DND mark broken

	* gtk/gtktextbtree.c (redisplay_mark): invalidate mark properly
	Patch by Yevgen Muntyan.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 551699 – gtk_scrolled_window_destroy() is broken

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_destroy,
	gtk_scrolled_window_finalize): Check that the [hv]scrollbar
	attributes are not-NULL before destroying and unparenting them.
	Patch by Björn Lindqvist

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkprinter.c: sets the is_default parameter to the value
	given by caller. Patch by Marek Kasik

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 319849 - gtkcalendar look in RTL locales

	* gtk/gtkcalendar.c (calendar_realize_week_numbers), 
	(gtk_calendar_realize): added missing RTL code to handle week numbers
	from gtk_calendar_size_alloc. Patch by Yair Hershkovitz

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkwidget.c (gtk_widget_get_draw_rectangle): when extending 
	the draw rectangle by the "draw-border" style property, subtract
	"left" from "x" and "top" from "y", not the other way around.
	Noticed by Michael Natterer

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 550528 - IconView DND interface does not work if only used as
	source

	* gtk/gtkiconview.c: Make source-only DND work.  Found by Alex Simon

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 549810 – Memory leaks in printing code

	* gtk/gtkprintjob.c (gtk_print_job_set_property):
	* modules/printbackends/file/gtkprintbackendfile.c
	(output_file_from_settings):
	* modules/printbackends/test/gtkprintbackendtest.c
	(output_test_from_settings): free some temporary strings.
	Patch by Yevgen Muntyan.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:
